<resources>
    <string name="app_name">Satena</string>
    <string name="copyright">Copyright \u00A9 %s suihan</string>
    <string name="developer">すいはん</string>
    <string name="developer_hatena">https://b.hatena.ne.jp/suihan74</string>
    <string name="developer_website">https://suihan74.github.io/</string>
    <string name="developer_email">suihan742@gmail.com</string>
    <string name="developer_twitter">https://twitter.com/suihan742</string>
    <string name="developer_twitter_id">\@suihan742</string>
    <string name="privacy_policy">https://suihan74.github.io/privacy_satena/</string>
    <string name="play_store">http://play.google.com/store/apps/details?id=com.suihan74.satena</string>
    <string name="hatena_rule">https://policies.hatena.ne.jp/rule</string>
    <string name="drawer_open">開く</string>
    <string name="drawer_close">閉じる</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="gravity_start">左</string>
    <string name="gravity_end">右</string>
    <string name="confirm_dialog_title_simple">確認</string>
    <string name="app_termination_dialog_msg">アプリを終了しますか？</string>
    <string name="msg_termination_dialog_error">終了確認ダイアログの生成に失敗したのでそのまま終了しました</string>
    <string name="msg_app_update_failed">アプリ更新に失敗しました。Playストアから再試行してください</string>
    <string name="app_update_notice">Satenaをアップデートできます。</string>
    <string name="app_update_ok">実行</string>
    <string name="app_update_mode_none">通知しない</string>
    <string name="app_update_mode_add_features">機能追加のみ</string>
    <string name="app_update_mode_fix">すべて</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">はい</string>
    <string name="dialog_no">いいえ</string>
    <string name="dialog_register">登録</string>
    <string name="dialog_delete">削除</string>
    <string name="dialog_open">開く</string>
    <string name="dialog_close">閉じる</string>
    <string name="select_all">すべて選択</string>
    <string name="clear_selection">選択解除</string>
    <string name="invalid_url_error">無効なURLです</string>
    <string name="scroll_to_top">一番上までスクロール</string>
    <string name="search_button_tooltip">検索</string>
    <string name="minutes">分</string>
    <string name="msg_copy_to_clipboard">クリップボードにコピーしました: %s</string>
    <plurals name="user">
        <item quantity="one">%1$d user</item>
        <item quantity="other">%1$d users</item>
    </plurals>
    <string name="sign_in">ログイン</string>
    <string name="authorize">連携</string>
    <string name="hint_mastodon_instance">インスタンス名 (e.g. mstdn.jp)</string>
    <string name="hint_misskey_instance">インスタンス名 (e.g. misskey.io)</string>
    <string name="msg_hatena_sign_in_info_is_blank">ユーザー名とパスワードを入力してください</string>
    <string name="msg_hatena_sign_in_succeeded">id:%s でログインしました</string>
    <string name="msg_hatena_sign_in_failed">ログイン失敗</string>
    <string name="msg_hatena_sign_in_warning_on_creating">注意:現在，Satenaから「Googleでログイン」はご利用いただけません</string>
    <string name="pref_account_misskey_msg_auth_succeeded">連携成功</string>
    <string name="pref_account_misskey_msg_auth_failure">連携失敗</string>
    <string name="bookmarks_tab_popular">注目</string>
    <string name="bookmarks_tab_recent">新着</string>
    <string name="bookmarks_tab_custom">カスタム</string>
    <string name="bookmarks_tab_all">すべて</string>
    <string name="bookmarks_digest_section_followings">お気に入りユーザー</string>
    <string name="bookmarks_digest_section_scored">ダイジェスト</string>
    <string name="entries_tab_hot">人気</string>
    <string name="entries_tab_recent">新着</string>
    <string name="entries_tab_mybookmarks">マイブックマーク</string>
    <string name="entries_tab_read_later">あとで読む</string>
    <string name="entries_tab_my_stars">最近つけたスター</string>
    <string name="entries_tab_stars_report">スターレポート</string>
    <string name="entries_tab_15th_entire">はてブの歴史</string>
    <string name="entries_tab_15th_user">あなたの歴史</string>
    <string name="entries_tab_15th">%d年</string>
    <string name="desc_memorial_entries_mode">モード選択</string>
    <string name="entries_tab_maintain">位置を維持</string>
    <string name="entry_item_ad">広告</string>
    <string name="search_type_tag">タグ</string>
    <string name="search_type_title">タイトル</string>
    <string name="search_type_text">テキスト</string>
    <string name="category_all">総合</string>
    <string name="category_general">一般</string>
    <string name="category_social">世の中</string>
    <string name="category_economics">政治と経済</string>
    <string name="category_life">暮らし</string>
    <string name="category_knowledge">学び</string>
    <string name="category_it">テクノロジー</string>
    <string name="category_entertainment">エンタメ</string>
    <string name="category_game">アニメとゲーム</string>
    <string name="category_fun">おもしろ</string>
    <string name="category_myhotentries">マイホットエントリ</string>
    <string name="category_mybookmarks">マイブックマーク</string>
    <string name="category_followings">お気に入りユーザー</string>
    <string name="category_favorite_sites">お気に入りサイト</string>
    <string name="category_mytags">タグ</string>
    <string name="category_search">検索</string>
    <string name="category_mystars">スター</string>
    <string name="category_stars_report">スターレポート</string>
    <string name="category_maintenance">障害・メンテナンス情報</string>
    <string name="category_history">ブクマ閲覧履歴</string>
    <string name="category_memorial15">タイムカプセル</string>
    <string name="category_user">ユーザーのブクマ</string>
    <string name="category_site">サイトのエントリ</string>
    <string name="notices_desc">通知</string>
    <string name="categories_desc">カテゴリ</string>
    <string name="my_bookmarks_desc">マイブックマーク</string>
    <string name="preferences_desc">設定</string>
    <string name="home_category_desc">ホームカテゴリ</string>
    <string name="open_official_top_desc">はてブ公式トップページを開く</string>
    <string name="open_official_hatena_desc">はてな公式トップページを開く</string>
    <string name="open_anonymous_diary_desc">匿名ダイアリを開く</string>
    <string name="entry_action_nothing">何もしない</string>
    <string name="entry_action_show_comments">ブックマークを見る</string>
    <string name="entry_action_show_page">ページを開く</string>
    <string name="entry_action_show_page_in_browser">ページを外部アプリで開く</string>
    <string name="entry_action_share">共有</string>
    <string name="entry_action_show_menu">メニューダイアログを開く</string>
    <string name="entry_action_favorite">お気に入りサイトに追加</string>
    <string name="entry_action_unfavorite">サイトをお気に入りから除外</string>
    <string name="entry_action_show_entries">このサイトのエントリ</string>
    <string name="entry_action_read_later">あとで読む</string>
    <string name="entry_action_read">読んだ</string>
    <string name="entry_action_delete_bookmark">ブックマークを削除する</string>
    <string name="entry_action_ignore">このサイトを非表示にする</string>
    <string name="entry_action_ignore_ads">はてなの広告を非表示にする</string>
    <string name="msg_show_page_failed">アプリ内ブラウザを開けませんでした。外部アプリを開きます</string>
    <string name="msg_show_page_in_browser_failed">外部アプリを開けませんでした</string>
    <string name="entry_comment_action_open">コメントを開く</string>
    <string name="entry_comment_action_open_app">外部アプリで開く</string>
    <string name="entry_comment_action_open_browser">アプリ内ブラウザで開く</string>
    <string name="entry_comment_action_show_user_entries">最近のブックマークを見る</string>
    <string name="entry_comment_action_modify_bookmark">ブックマークを編集</string>
    <string name="entry_comment_action_delete_bookmark">ブックマークを削除</string>
    <string name="bookmark_title_action_nothing">何もしない</string>
    <string name="bookmark_title_action_show_page">ページを開く</string>
    <string name="bookmark_title_action_show_page_dialog">ページを開く(確認ダイアログ)</string>
    <string name="bookmark_title_action_share">共有</string>
    <string name="bookmark_title_action_show_menu">メニューダイアログを開く</string>
    <string name="bookmark_confirm_browsing_dialog_desc">アプリ内ブラウザでページを開きます。よろしいですか？</string>
    <string name="bookmark_confirm_browsing_dialog_not_show_again">次回から確認しない</string>
    <string name="bookmark_confirm_browsing_dialog_positive_action">開く</string>
    <string name="bookmark_confirm_browsing_dialog_negative_action">何もしない</string>
    <string name="bookmark_show_user_entries">最近のブックマークを見る</string>
    <string name="bookmark_show_comment_entry">ブクマへのブックマークを見る</string>
    <string name="bookmark_share_comment_page_url">共有</string>
    <string name="bookmark_delete">ブックマークを削除</string>
    <string name="bookmark_follow">ユーザーをフォロー</string>
    <string name="bookmark_unfollow">ユーザーをフォロー解除</string>
    <string name="bookmark_ignore">ユーザーを非表示</string>
    <string name="bookmark_unignore">ユーザー非表示を解除</string>
    <string name="bookmark_add_ignored_word">NGワード追加</string>
    <string name="bookmark_report">通報する</string>
    <string name="bookmark_user_tags">ユーザータグ</string>
    <string name="pref_accounts_service_name_hatena">Hatena</string>
    <string name="pref_accounts_service_name_mastodon">Mastodon</string>
    <string name="pref_accounts_sign_in">ログイン</string>
    <string name="pref_entries_layout_mode_desc">ボトムメニューを使用する</string>
    <string name="pref_hide_bottom_appbar_by_scrolling_desc">スクロールでボトムメニューを隠す</string>
    <string name="pref_bottom_bar_items_desc">ボトムメニュー項目をカスタマイズ</string>
    <string name="pref_bottom_menu_items_gravity_desc">ボトムメニュー項目の配置方法</string>
    <string name="pref_extra_bottom_items_alignment_desc">ボトムメニュー追加項目の配置方法</string>
    <string name="pref_entries_single_tap_action_desc">シングルタップ時の動作</string>
    <string name="pref_entries_multiple_tap_action_desc">複数回タップ時の動作</string>
    <string name="pref_entries_long_tap_action_desc">ロングタップ時の動作</string>
    <string name="pref_entries_multiple_tap_duration_desc">タップ回数の判定時間</string>
    <string name="pref_home_category_desc">ホームカテゴリ</string>
    <string name="pref_entries_initial_tab_desc">最初に表示するタブ</string>
    <string name="pref_entries_categories_mode_desc">カテゴリ一覧の表示形式</string>
    <string name="pref_entries_menu_tap_guard_desc">メニュー表示中に他の操作をできないようにする</string>
    <string name="pref_entries_hiding_toolbar_by_scrolling_desc">スクロールでツールバーを隠す</string>
    <string name="pref_entries_history_max_size_desc">ブクマ閲覧履歴の最大保存数</string>
    <string name="pref_entries_change_home_by_long_tapping_desc">タブ長押しでホームカテゴリ・初期タブを変更する</string>
    <string name="pref_entries_read_action_type_desc">「あとで読む」エントリを「読んだ」したときの挙動</string>
    <string name="pref_entries_read_action_boilerplate_desc">「読んだ」ときに投稿する定型文</string>
    <string name="pref_entries_read_action_boilerplate_hint">ブコメの入力ルールに従います</string>
    <string name="pref_bottom_items_alignment_left">左寄せ</string>
    <string name="pref_bottom_items_alignment_right">右寄せ</string>
    <string name="pref_bookmarks_using_post_dialog_desc">ブックマークする前に確認する</string>
    <string name="pref_bookmarks_initial_tab_desc">最初に表示するタブ</string>
    <string name="pref_bookmarks_hiding_buttons_with_scrolling_desc">スクロールにあわせて画面下部のボタンを隠す</string>
    <string name="pref_bookmarks_showing_ignored_users_in_all_bookmarks_desc">「すべて」タブでは非表示対象を表示する</string>
    <string name="pref_bookmarks_showing_ignored_users_with_calling_desc">idコールで言及されている非表示対象を表示する</string>
    <string name="pref_bookmarks_showing_stars_of_ignored_users_desc">ブクマ詳細画面で非表示対象のスターを表示する</string>
    <string name="pref_bookmarks_hiding_toolbar_by_scrolling">スクロールでツールバーを隠す</string>
    <string name="pref_bookmarks_using_post_star_dialog_desc">スターをつける前に確認する</string>
    <string name="pref_bookmark_link_single_tap_action_desc">ブコメ内のリンクをタップしたときの動作</string>
    <string name="pref_bookmark_link_long_tap_action_desc">ブコメ内のリンクを長押ししたときの動作</string>
    <string name="browser_menu_back_stack">戻る/進む</string>
    <string name="browser_menu_bookmarks">ブクマ画面を表示</string>
    <string name="browser_menu_share">共有</string>
    <string name="browser_menu_add_blocking">ブロック設定を追加</string>
    <string name="browser_menu_adblock">AdBlock</string>
    <string name="browser_menu_javascript">Javascript</string>
    <string name="browser_menu_settings">設定</string>
    <string name="browser_menu_exit">終了</string>
</resources>