<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/back_stack"
            android:title="@string/browser_menu_back_stack"/>

    <item
            android:id="@+id/bookmarks"
            android:title="@string/browser_menu_bookmarks"/>

    <item
            android:id="@+id/share"
            android:title="@string/browser_menu_share"/>

    <item
            android:id="@+id/add_blocking"
            android:title="@string/browser_menu_add_blocking"/>

    <item
            android:id="@+id/adblock"
            android:title="@string/browser_menu_adblock"/>

    <item
            android:id="@+id/javascript"
            android:title="@string/browser_menu_javascript"/>

    <item
            android:id="@+id/settings"
            android:title="@string/browser_menu_settings"/>

    <item
            android:id="@+id/exit"
            android:title="@string/browser_menu_exit"/>
</menu>
