<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.suihan74.satena.models.EntryReadActionType"/>
        <import type="com.suihan74.satena.scenes.preferences.pages.BottomMenuItemsGravityConverter"/>
        <variable
                name="vm"
                type="com.suihan74.satena.scenes.preferences.pages.PreferencesEntriesViewModel" />
    </data>

    <ScrollView
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
        android:scrollbarSize="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="15dp"
                android:orientation="vertical">

            <TextView
                    android:text="@string/pref_entries_layout_mode_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ToggleButton
                    android:id="@+id/preferences_entries_layout_mode_button"
                    style="?toggleButtonStyle"
                    android:checked="@={vm.bottomLayoutMode}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_hide_bottom_appbar_by_scrolling_desc"
                    android:visibility="@{vm.bottomLayoutMode}"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ToggleButton
                    android:id="@+id/preferences_hide_bottom_appbar_by_scroll_button"
                    style="?toggleButtonStyle"
                    android:visibility="@{vm.bottomLayoutMode}"
                    android:checked="@={vm.hideBottomLayoutByScroll}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_bottom_bar_items_desc"
                    android:visibility="@{vm.bottomLayoutMode}"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <com.suihan74.satena.scenes.preferences.bottomBar.UserBottomItemsSetter
                    android:id="@+id/bottom_bar_item_setter"
                    android:visibility="@{vm.bottomLayoutMode}"
                    items="@{vm.bottomBarButtons}"
                    app:menuGravity="@{vm.bottomBarButtonsGravity}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_bottom_menu_items_gravity_desc"
                    android:visibility="@{vm.bottomLayoutMode}"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ToggleButton
                    style="?toggleButtonStyle"
                    android:visibility="@{vm.bottomLayoutMode}"
                    android:checked="@={BottomMenuItemsGravityConverter.set(vm.bottomBarButtonsGravity)}"
                    android:textOn="@string/pref_bottom_items_alignment_right"
                    android:textOff="@string/pref_bottom_items_alignment_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:visibility="@{vm.bottomLayoutMode}"
                    android:text="@string/pref_extra_bottom_items_alignment_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/extra_bottom_items_alignment_button"
                    style="?buttonStyle"
                    android:visibility="@{vm.bottomLayoutMode}"
                    android:text="@{vm.extraBottomItemsAlignment.textId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_single_tap_action_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_entries_single_tap_action"
                    style="?buttonStyle"
                    android:text="@{vm.singleTapAction.titleId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_multiple_tap_action_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_entries_multiple_tap_action"
                    style="?buttonStyle"
                    android:text="@{vm.multipleTapAction.titleId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_long_tap_action_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_entries_long_tap_action"
                    style="?buttonStyle"
                    android:text="@{vm.longTapAction.titleId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_multiple_tap_duration_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_entries_multiple_tap_duration"
                    style="?buttonStyle"
                    android:text="@{vm.multipleTapDuration.toString() + `ミリ秒`}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_home_category_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_home_category"
                    style="?buttonStyle"
                    android:text="@{vm.homeCategory.textId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/preferences_entries_initial_tab_desc"
                    android:visibility="@{!vm.homeCategory.singleColumns}"
                    android:text="@string/pref_entries_initial_tab_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_entries_initial_tab"
                    style="?buttonStyle"
                    android:visibility="@{!vm.homeCategory.singleColumns}"
                    app:homeCategory="@{vm.homeCategory}"
                    app:initialTab="@{vm.initialTab}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_change_home_by_long_tapping_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ToggleButton
                    android:id="@+id/preferences_entries_change_home_by_long_tapping"
                    style="?toggleButtonStyle"
                    android:checked="@={vm.changeHomeByLongTappingTab}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:visibility="@{!vm.homeCategory.singleColumns}"
                    android:text="@string/pref_entries_categories_mode_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_entries_categories_mode"
                    style="?buttonStyle"
                    android:text="@{vm.categoriesMode.textId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_menu_tap_guard_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ToggleButton
                    android:id="@+id/preferences_entries_menu_tap_guard"
                    style="?toggleButtonStyle"
                    android:checked="@={vm.menuTapGuard}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_hiding_toolbar_by_scrolling_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <ToggleButton
                    android:id="@+id/preferences_entries_hiding_toolbar_by_scrolling"
                    style="?toggleButtonStyle"
                    android:checked="@={vm.hideToolbarWithScroll}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_history_max_size_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_entries_history_max_size"
                    style="?buttonStyle"
                    android:text="@{vm.historyMaxSize + @string/pref_entries_history_max_size_text}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_read_action_type_desc"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/preferences_entries_read_action_type"
                    style="?buttonStyle"
                    android:text="@{vm.entryReadActionType.textId}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/pref_entries_read_action_boilerplate_desc"
                    android:visibility="@{vm.entryReadActionType == EntryReadActionType.BOILERPLATE}"
                    android:layout_marginTop="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <com.suihan74.utilities.views.ImeEnhancedEditText
                    android:id="@+id/preferences_entries_read_action_boilerplate"
                    android:visibility="@{vm.entryReadActionType == EntryReadActionType.BOILERPLATE}"
                    android:text="@={vm.entryReadActionBoilerPlate}"
                    android:hint="@string/pref_entries_read_action_boilerplate_hint"
                    android:inputType="textNoSuggestions"
                    android:importantForAutofill="no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</layout>
