<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="15dp"
        android:orientation="vertical">

    <TextView
            android:text="@string/pref_accounts_service_name_hatena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/preferences_accounts_hatena_name"
            android:textColor="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/preferences_accounts_hatena_sign_in_button"
            style="?buttonStyle"
            android:text="@string/pref_accounts_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/pref_accounts_service_name_mastodon"
            android:layout_marginTop="36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/preferences_accounts_mastodon_name"
            android:textColor="@color/mastodonColorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/preferences_accounts_mastodon_sign_in_button"
            style="?buttonStyle"
            android:text="@string/pref_accounts_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
